<resources>
    <string name="app_name">Boiled Potato</string>
    <string name="main_activity_title">Find a Recipe</string>
    <string name="main_activity_heading_cuisine">Cuisines</string>
    <string name="search_field_hint">Search by Ingredient</string>
    <string name="cuisine_american">American</string>
    <string name="cuisine_mexican">Mexican</string>
    <string name="cuisine_chinese">Chinese</string>
    <string name="cuisine_japanese">Japanese</string>
    <string name="cuisine_indian">Indian</string>
    <string name="cuisine_french">French</string>
    <string name="cuisine_italian">Italian</string>
    <string name="cuisine_spanish">Spanish</string>
    <string name="cuisine_british">British</string>
    <string name="search_results_activity_title">Search Results</string>
    <string name="cuisine_paragraph">Filter search results by cuisine type</string>
    <string name="placeholder_text">Lorem Ipsum Dolor Sit Amet Recteur Consequat E Pluribus Unum</string>
    <string name="no_results_found">No results found! Check keyword spelling or try using fewer keywords</string>
    <string name="status_loading">Loading</string>
    <string name="button_load_more">Load More</string>
    <string name="retry">Retry</string>
    <string name="SERVER_ERROR">Server Error</string>
    <string name="NETWORK_ERROR">Slow or No Internet Connection</string>
    <string name="DATA_ERROR">Error while Processing Data</string>
    <string name="NOT_FOUND_ERROR">No Results Found</string>
    <string name="try_again">Tap to try again</string>
    <string name="recipe_label_servings">%1$s Servings</string>
    <string name="recipe_label_prep_time">Prep Time</string>
    <string name="min">%1$s min</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="MARKED_FAVORITE">Recipe marked as favorite</string>
    <string name="MARKED_UNFAVORITE">Recipe removed from favorites</string>
    <string name="FAVORITES">Favorite Recipes</string>
</resources>
