<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/component_color_neutral"
        android:id="@+id/search_component"
        android:paddingLeft="@dimen/padding_viewport"
        android:paddingRight="@dimen/padding_viewport"
        android:paddingTop="@dimen/padding_viewport"
        android:paddingBottom="@dimen/line_spacing_search_component"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            style="@style/appbar_button"
            android:id="@+id/back_button"
            android:background="@drawable/ic_arrow_back_yellow_32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            style="@style/heading"
            android:id="@+id/title"
            android:text="@string/main_activity_title"
            app:layout_constraintLeft_toRightOf="@id/back_button"
            app:layout_constraintRight_toLeftOf="@id/favorites_button"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            style="@style/appbar_button"
            android:id="@+id/favorites_button"
            android:background="@drawable/ic_star_yellow_32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/search_field"
            android:background="@drawable/input_field_border"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size_main"
            android:layout_marginEnd="@dimen/margin_main"
            android:layout_marginTop="@dimen/line_spacing_search_component"
            android:textSize="@dimen/font_size_main"
            android:inputType="text"
            android:padding="@dimen/padding_main"
            android:hint="@string/search_field_hint"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/search_button"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/search_button"
            android:background="@drawable/button_background_primary"
            android:drawableTop="@drawable/ic_search_black_32dp"
            android:layout_width="@dimen/button_size_main"
            android:layout_height="@dimen/button_size_main"
            android:layout_marginTop="@dimen/line_spacing_search_component"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/search_field"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/padding_border_line"
        app:layout_constraintTop_toBottomOf="@id/search_component"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_viewport"
            android:paddingRight="@dimen/padding_viewport"
            android:paddingBottom="@dimen/padding_viewport">

            <TextView
                android:id="@+id/heading_cuisine"
                style="@style/heading_dark"
                android:layout_marginTop="@dimen/line_spacing"
                android:text="@string/main_activity_heading_cuisine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cuisine_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/padding_viewport"
                android:paddingRight="@dimen/padding_viewport"
                android:text="@string/cuisine_paragraph"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heading_cuisine" />

            <Button
                android:id="@+id/cuisine_button_american"
                style="@style/cuisine_button"
                android:drawableTop="@drawable/ic_burger_yellow_32dp"
                android:text="@string/cuisine_american"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuisine_text"
                app:layout_constraintWidth_percent="0.3" />

            <Button
                android:id="@+id/cuisine_button_mexican"
                style="@style/cuisine_button"
                android:drawableTop="@drawable/ic_taco_yellow_32dp"
                android:text="@string/cuisine_mexican"
                app:layout_constraintLeft_toRightOf="@id/cuisine_button_american"
                app:layout_constraintRight_toLeftOf="@id/cuisine_button_chinese"
                app:layout_constraintTop_toBottomOf="@id/cuisine_text"
                app:layout_constraintWidth_percent="0.3" />

            <Button
                android:id="@+id/cuisine_button_chinese"
                style="@style/cuisine_button"
                android:drawableTop="@drawable/ic_rice_yellow_32dp"
                android:text="@string/cuisine_chinese"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuisine_text"
                app:layout_constraintWidth_percent="0.3" />

            <Button
                android:id="@+id/cuisine_button_japanese"
                style="@style/cuisine_button"
                android:drawableTop="@drawable/ic_sushi_yellow_32dp"
                android:text="@string/cuisine_japanese"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuisine_button_american"
                app:layout_constraintWidth_percent="0.3" />

            <Button
                android:id="@+id/cuisine_button_indian"
                style="@style/cuisine_button"
                android:drawableTop="@drawable/ic_curry_yellow_32dp"
                android:text="@string/cuisine_indian"
                app:layout_constraintLeft_toRightOf="@id/cuisine_button_japanese"
                app:layout_constraintRight_toLeftOf="@id/cuisine_button_french"
                app:layout_constraintTop_toBottomOf="@id/cuisine_button_mexican"
                app:layout_constraintWidth_percent="0.3" />

            <Button
                android:id="@+id/cuisine_button_french"
                style="@style/cuisine_button"
                android:drawableTop="@drawable/ic_croissant_yellow_32dp"
                android:text="@string/cuisine_french"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuisine_button_chinese"
                app:layout_constraintWidth_percent="0.3" />

            <Button
                android:id="@+id/cuisine_button_italian"
                style="@style/cuisine_button"
                android:drawableTop="@drawable/ic_pizza_yellow_32dp"
                android:text="@string/cuisine_italian"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuisine_button_japanese"
                app:layout_constraintWidth_percent="0.3" />

            <Button
                android:id="@+id/cuisine_button_spanish"
                style="@style/cuisine_button"
                android:drawableTop="@drawable/ic_paella_yellow_32dp"
                android:text="@string/cuisine_spanish"
                app:layout_constraintLeft_toRightOf="@id/cuisine_button_italian"
                app:layout_constraintRight_toLeftOf="@id/cuisine_button_british"
                app:layout_constraintTop_toBottomOf="@id/cuisine_button_indian"
                app:layout_constraintWidth_percent="0.3" />

            <Button
                android:id="@+id/cuisine_button_british"
                style="@style/cuisine_button"
                android:drawableTop="@drawable/ic_fish_and_chips_yellow_32dp"
                android:text="@string/cuisine_british"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuisine_button_french"
                app:layout_constraintWidth_percent="0.3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>